plugin schema updated
