# generated/csharp/plugin_metadata/src/Org.OpenAPITools/Model/PluginsIdImagesThumbnailPutRequest.cs
@@ -1,0 +1,83 @@
+/*
+ * Plugin Management API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Runtime.Serialization;
+using System.Text;
+using System.Text.RegularExpressions;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using Newtonsoft.Json.Linq;
+using System.ComponentModel.DataAnnotations;
+using OpenAPIDateConverter = Org.OpenAPITools.Client.OpenAPIDateConverter;
+
+namespace Org.OpenAPITools.Model
+{
+    /// <summary>
+    /// PluginsIdImagesThumbnailPutRequest
+    /// </summary>
+    [DataContract(Name = "_plugins__id__images_thumbnail_put_request")]
+    public partial class PluginsIdImagesThumbnailPutRequest : IValidatableObject
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="PluginsIdImagesThumbnailPutRequest" /> class.
+        /// </summary>
+        /// <param name="thumbnailUrl">URL of the thumbnail image.</param>
+        public PluginsIdImagesThumbnailPutRequest(string thumbnailUrl = default(string))
+        {
+            this.ThumbnailUrl = thumbnailUrl;
+        }
+
+        /// <summary>
+        /// URL of the thumbnail image
+        /// </summary>
+        /// <value>URL of the thumbnail image</value>
+        [DataMember(Name = "thumbnailUrl", EmitDefaultValue = false)]
+        public string ThumbnailUrl { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class PluginsIdImagesThumbnailPutRequest {\n");
+            sb.Append("  ThumbnailUrl: ").Append(ThumbnailUrl).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public virtual string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, Newtonsoft.Json.Formatting.Indented);
+        }
+
+        /// <summary>
+        /// To validate all properties of the instance
+        /// </summary>
+        /// <param name="validationContext">Validation context</param>
+        /// <returns>Validation Result</returns>
+        IEnumerable<ValidationResult> IValidatableObject.Validate(ValidationContext validationContext)
+        {
+            yield break;
+        }
+    }
+
+}
